--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                             </div>
                         </aside>
                     </div>
-                    <img class="profile-photo" src="img/profile.png" alt="Lee Roi Andrei Cayetano profile photo" />
+                    <img class="profile-photo" src="img/Profile.png" alt="Lee Roi Andrei Cayetano profile photo" />
                 </section>
                 <section class="section about-section" id="about">
                     <header class="section-header">
