--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                         </div>
                         <!-- ROW 3 — Left Job + Right Logo -->
                         <div class="exp-left job-card">
-                            <p class="job-title"> <span class="accent-char">$</span> Contributing Partner – Security Engineer (DevSecOps &amp; Endpoint Management) </p>
+                            <p class="job-title"> <span class="accent-char">$</span> Contributing Partner – Security Engineer (OS Hardening &amp; Secure ISO Engineering) </p>
                             <p class="job-date">Oct 2025 – Present</p>
                         </div>
                         <div class="exp-marker marker-3">
