--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
                 { provider: "Google", title: "Introduction to Cybersecurity Essentials", id: "P503ZAEDSVG9", date: "Issued Oct 2025", url: "https://coursera.org/share/4e5c1ef01dc1a677dd3e7da5cde20550"},
                 { provider: "Cisco", title: "Networking Basics", id: "706f3906-db07-4124-8fc0-7b7ddc98f990", date: "Issued Feb 2025", url: "https://www.credly.com/badges/706f3906-db07-4124-8fc0-7b7ddc98f990/public_url"},
                 { provider: "Cisco", title: "Introduction to Cybersecurity", id: "72bb8514-a73e-4886-8d21-7f44db2be8a0", date: "Issued Oct 2024", url: "https://www.credly.com/badges/72bb8514-a73e-4886-8d21-7f44db2be8a0/public_url"},
-                { provider: "Try Hack Me", title: "Pre Security Certificate", id: "THM-BHIEXR8QV1", date: "Dec 2025", url: "https://tryhackme-certificates.s3-eu-west-1.amazonaws.com/THM-BHIEXR8QV1.pdf" },
+                { provider: "Try Hack Me", title: "Pre Security Certificate", id: "THM-BHIEXR8QV1", date: "Issued Dec 2025", url: "https://tryhackme-certificates.s3-eu-west-1.amazonaws.com/THM-BHIEXR8QV1.pdf" },
                 { provider: "Ongoing", title: "Pursuing New Certification", id: ": I mean I'm trying here", date: "", url: "" }
             ];
 
