--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                                                 <option value="foundational">Foundational</option>
                                                 <option value="analyst">Security Analyst</option>
                                                 <option value="pentester">Penetration Tester</option>
-                                                <option value="engineer">Security Engineer</option>
+                                                <option value="engineer">DevSecOps</option>
                                             </select>
                                         </div>
                                         <div class="cyber-select-group">
